--- a/drf-quasar-ui/ui/package.json
+++ b/drf-quasar-ui/ui/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "quasar-ui-drf-quasar-ui",
-  "version": "0.0.4",
+  "name": "drf-quasar-ui",
+  "version": "0.0.5",
   "author": "Abraham Friessen <47253584+abrahamPYW@users.noreply.github.com>",
   "description": "Django Rest Framwork with Quasar Components",
   "license": "MIT",
-  "module": "dist/index.esm.js",
-  "main": "dist/index.common.js",
+  "module": "src/index.esm.js",
+  "main": "src/index.common.js",
   "scripts": {
     "dev": "cd dev && yarn dev && cd ..",
     "dev:umd": "yarn build && node build/script.open-umd.js",
